objects/Team_Staff__c.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Notes_Comments__c</fullName>
        <label>Notes &amp; Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <formula>Team__r.School_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staff_Member__c</fullName>
        <label>Staff Member</label>
        <referenceTo>Staff__c</referenceTo>
        <relationshipLabel>Team/Staff</relationshipLabel>
        <relationshipName>Team_Staff</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <referenceTo>Team__c</referenceTo>
        <relationshipLabel>Team/Staff</relationshipLabel>
        <relationshipName>Team_Staff</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Team/Staff</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TS-{0}</displayFormat>
        <label>Team/Staff ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Team/Staff</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>